- Fixed overflow on transaction table parents - Fixed over flow on data grid for transactions

--- a/Transwextions/Transwextions.App/wwwroot/css/main.css
+++ b/Transwextions/Transwextions.App/wwwroot/css/main.css
@@ -4,3 +4,9 @@
     font-weight: normal;
     font-style: normal;
 }
+
+.rz-body {
+    height: 100%;
+    width: 100%;
+    overflow:hidden;
+}
